# fhn

./: .gitmodules  Makefile  README.md
go_fhn/: .gitignore  Makefile  go.mod  main.go
rust_fhn/: .gitignore  Cargo.toml  Makefile
rust_fhn/src/: main.rs
vlang_fhn/: .gitignore  Makefile  fhn.v
zig_fhn/: .gitignore  Makefile  build.zig
zig_fhn/src/: main.zig
zig_fhn_ziget_iguana/: Makefile  build.zig
zig_fhn_ziget_iguana/src/: main.zig
